--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -14,37 +14,44 @@
 <body>
   <header>
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="/" tabindex="1" aria-label="Home">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" aria-labelledby="aria-map-description" aria-hidden="true" role="application">
+      <div id="map" aria-labelledby="aria-map-description" aria-hidden="true" role="application"></div>
     </section>
-    <section>
+    <section role="main">
       <div class="filter-options">
-        <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <h2 tabindex="0" aria-labelledby="aria-filter-results">Filter Results</h2>
+        <label id="aria-filter-results" class="aria-label">Filter Results Section</label>
+        <select tabindex="0" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()"
+          aria-labelledby="aria-neighborhoods">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <label id="aria-neighborhoods" class="aria-label">Filter Results by Neighborhood</label>
+        <select tabindex="0" id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-labelledby="aria-cuisines">
           <option value="all">All Cuisines</option>
         </select>
+        <label id="aria-cuisines" class="aria-label">Filter Results by Cuisines</label>
       </div>
-      <ul id="restaurants-list"></ul>
+
+      <ul tabindex="0" id="restaurants-list" class="restaurant-results" aria-labelledby="filter-results"></ul>
+      <label id="filter-results" class="aria-label">Filter Results</label>
     </section>
   </main>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
     crossorigin=""></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script>
 
 
-  <footer id="footer">
+  <footer id="footer" aria-labelledby="aria-footer" tabindex="0">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
+  <label id="aria-footer" class="aria-label">Footer Copyright</label>
 
 </body>
 
