--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <footer id="footer" aria-labelledby="aria-footer" tabindex="0">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
-  <label id="aria-footer" class="aria-label">Footer Copyright</label>
+  <label id="aria-footer" class="aria-label">Footer</label>
 
 </body>
 
