--- a/restaurant.html
+++ b/restaurant.html
@@ -18,10 +18,10 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="/" tabindex="1">Restaurant Reviews</a></h1>
       <!-- Beginning breadcrumb -->
-      <nav>
-        <ul id="breadcrumb">
+      <nav aria-label="Breadcrumb">
+        <ul id="breadcrumb" aria-labelledby="aria-breadcrumb">
           <li><a href="/">Home</a></li>
         </ul>
       </nav>
@@ -32,51 +32,57 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="maincontent" role="main" tabindex="0" aria-labelledby="maincontent-label">
+    <label class="aria-label" id="maincontent-label">Main Content</label>
 
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-
+    <section id="restaurant-container" aria-labelledby="container-label">
+      <label id="container-label" class="aria-label">Section Restaurant Information</label>
       <div class="restaurant-wrap">
-        <h1 id="restaurant-name"></h1>
-        <img id="restaurant-img" />
+        <h1 id="restaurant-name" tabindex="0"></h1>
+        <img id="restaurant-img" tabindex="0" />
       </div>
 
       <div class="restaurant-info">
-        <p id="restaurant-cuisine"></p>
-        <p id="restaurant-address"></p>
-        <table id="restaurant-hours"></table>
+        <p id="restaurant-cuisine" tabindex="0" aria-labelledby="cuisine-label"></p>
+        <p id="restaurant-address" tabindex="0" aria-labelledby="address-label"></p>
+        <label id="address-label" class="aria-label">Restaurant Address</label>
+        <table id="restaurant-hours" tabindex="0" aria-labelledby="hours-label"></table>
+        <label id="hours-label" class="aria-label">Restaurant Hours</label>
       </div>
 
     </section>
     <!-- end restaurant -->
 
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map">
-
+    <section id="map-container" aria-hidden="true" aria-labelledby="aria-map" role="application">
+      <div id="map" aria-hidden="true" aria-labelledby="aria-map" role="application">
       </div>
+      <label id="aria-map" class="aria-label">Map Interface</label>
     </section>
     <!-- End map -->
 
-
     <!-- Beginning reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+    <section id="reviews-container" tabindex="0" aria-labelledby="reviews-label">
+      <label id="reviews-label" class="aria-label">Reviews Section</label>
+      <ul id="reviews-list" tabindex="0" aria-labelledby="reviews-list-label"></ul>
+      <label id="reviews-list-label" class="aria-label">Reviews</label>
     </section>
     <!-- End reviews -->
   </main>
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer id="footer">
+  <footer id="footer" tabindex="0" aria-labelledby="footer-label">
+    <label id="footer-label" class="aria-label">Footer</label>
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All
     Rights Reserved.
   </footer>
   <!-- End footer -->
+
+  <!-- Beginning scripts -->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
     crossorigin=""></script>
-  <!-- Beginning scripts -->
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
