--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script>
 
+  <!-- Register Service Worker -->
+  <!-- <script type="text/javascript" src="js/sw-register.js"></script> -->
 
   <footer id="footer" aria-labelledby="aria-footer" tabindex="0">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
