--- a/restaurant.html
+++ b/restaurant.html
@@ -87,6 +87,10 @@
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
+
+  <!-- Register Service Worker -->
+  <script type="text/javascript" src="js/sw-register.js"></script>
+
   <!-- Google Maps -->
   <!--
       <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script>
