--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
@@ -12,32 +12,32 @@
 </head>
 
 <body>
-  <header>
+  <header role="banner">
     <nav>
-      <h1><a href="/" tabindex="1" aria-label="Home">Restaurant Reviews</a></h1>
+      <h1><a href="/" tabindex="0" aria-label="Home">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
-  <main id="maincontent">
-    <section id="map-container" aria-labelledby="aria-map-description" aria-hidden="true" role="application">
-      <div id="map" aria-labelledby="aria-map-description" aria-hidden="true" role="application"></div>
+  <main id="maincontent" role="main">
+    <section id="map-container" aria-hidden="true" aria-label="aria-map-description" role="application">
+      <div id="map" aria-hidden="true" aria-label="aria-map-description" role="application"></div>
     </section>
-    <section role="main">
+    <section id="filter-list-container" aria-labelledby="filter-label" role="region">
       <div class="filter-options">
-        <h2 tabindex="0" aria-labelledby="aria-filter-results">Filter Results</h2>
-        <label id="aria-filter-results" class="aria-label">Filter Results Section</label>
+        <h2 aria-labelledby="aria-filter-results">Filter Results</h2>
+        <label for="neighborhoods-select" id="aria-filter-results" class="aria-label">Filter Results Section</label>
         <select tabindex="0" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()"
           aria-labelledby="aria-neighborhoods">
           <option value="all">All Neighborhoods</option>
         </select>
-        <label id="aria-neighborhoods" class="aria-label">Filter Results by Neighborhood</label>
+        <label for="cuisines-select" id="aria-neighborhoods" class="aria-label">Filter Results by Neighborhood</label>
         <select tabindex="0" id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-labelledby="aria-cuisines">
           <option value="all">All Cuisines</option>
         </select>
         <label id="aria-cuisines" class="aria-label">Filter Results by Cuisines</label>
       </div>
 
-      <ul tabindex="0" id="restaurants-list" class="restaurant-results" aria-labelledby="filter-results"></ul>
+      <ul id="restaurants-list" role="region" class="restaurant-results" aria-label="filter-results"></ul>
       <label id="filter-results" class="aria-label">Filter Results</label>
     </section>
   </main>
@@ -50,7 +50,7 @@
   <!-- Register Service Worker -->
   <script type="text/javascript" src="js/sw-register.js"></script>
 
-  <footer id="footer" aria-labelledby="aria-footer" tabindex="0">
+  <footer id="footer" aria-labelledby="aria-footer" tabindex="0" role="contentinfo">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <label id="aria-footer" class="aria-label">Footer</label>
