--- a/restaurant.html
+++ b/restaurant.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -15,13 +15,13 @@
 
 <body class="inside">
   <!-- Beginning header -->
-  <header>
+  <header role="banner">
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/" tabindex="1">Restaurant Reviews</a></h1>
+      <h1><a href="/" tabindex="0">Restaurant Reviews</a></h1>
       <!-- Beginning breadcrumb -->
       <nav aria-label="Breadcrumb">
-        <ul id="breadcrumb" aria-labelledby="aria-breadcrumb">
+        <ul id="breadcrumb" aria-label="aria-breadcrumb" role="navigation">
           <li><a href="/">Home</a></li>
         </ul>
       </nav>
@@ -45,6 +45,7 @@
 
       <div class="restaurant-info">
         <p id="restaurant-cuisine" tabindex="0" aria-labelledby="cuisine-label"></p>
+        <label id="cuisine-label" class="aria-label">Restaurant Cuisine</label>
         <p id="restaurant-address" tabindex="0" aria-labelledby="address-label"></p>
         <label id="address-label" class="aria-label">Restaurant Address</label>
         <table id="restaurant-hours" tabindex="0" aria-labelledby="hours-label"></table>
